added company logos and adjusted fonts

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title></title>
     <link rel="stylesheet" href="master.css">
-    <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Raleway|Waiting+for+the+Sunrise&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Slabo+27px&display=swap" rel="stylesheet">
   </head>
   <body>
 
@@ -80,38 +80,35 @@
 
         <h4><img class="sm-logo" src="assets/MLBN.png" alt="mlbnetwork-logo"> MLB Advanced Media/MLB Network | Multimedia Producer/Broadcast Associate | Aug 2016 - Nov 2018 </h4>
           <div class="experience-block">
-            <ul>
-              <li>Internally recruited to an elite team of 4 to structure bespoke complex derivatives solutions that generated P&L from $25k to $2mm per trade</li>
-              <li>Worked hand-in-hand with leadership to negotiate largest margin loan in bank history ($400mm); personally pitched tailored solutions & drove creation of pitch materials & strategies </li>
-              <li>Designed and built client-facing tools for visualizing margin loan impact on clients’ IRR and collateral liquidation strategies for margin loans on convertible bonds</li>
-              <li>Solved internal application issues by building dynamic programs with VBA: </li>
-                <ul>
-                  <li>automated valuation report generator for products with compounding interest</li>
-                  <li>trade database that tracks cumulative and daily P&L changes</li>
-                  <li>margin loan monitor that calculates daily cash flow and tracks interest rate resets</li>
-                </ul>
-            </ul>
+              <li> Edited and produced scripted daily highlight packages and original content for game recaps, news hits, condensed games and player/team sizzle reels for MLB.com and MLB Network reaching 75+ million subscribers.</li>
+              <li>Collaborated with show producers and on-air talent to coordinate segment ideas and matching video content for daily shows.</li>
+              <li> Led meetings with research department to ensure all clip metadata was factually accurate; provided quality control of content before release on Major League Baseball website.</li>
           </div>
 
         <br />
 
-        <h4> <img class="sm-logo" src="assets/SG-logo.png" alt="socgen-logo">  Société Générale | Equity Derivatives Flow | Jul 2016 - Jan 2018 </h4>
+        <h4> <img class="sm-logo" src="assets/CBS_logo.png" alt="cbs-logo">  CBS Sports Network | Broadcast Associate | Jul 2013 - Jul 2016 </h4>
 
         <div class="experience-block">
-          <ul>
-            <li>Covered over 12 hedge fund clients w. products ranging from vanilla options to exotic derivatives; & insurance clients trading complex index option strategies: calendar spreads, call ratios, rainbows, cliquets & hybrids </li>
-            <li>Single-handedly trained three replacement analysts and created a thorough training manual (~90 pages) that has continued to be used by the team after departure; training manual covered holistic product lines and client trading strategies </li>
-            <li>Attended client meetings to procure new business </li>
-            <li>Selected to spearhead the creation of a new pricing and booking tool that would grow the insurance business to over $16mm a year from $8mm a year</li>
-          </ul>
+            <li>Coordinated and executed all graphics production on live remote sports broadcasts reaching 55+ million households; sports covered included college football, basketball, baseball, lacrosse, and US Open Tennis. </li>
+            <li>Managed licensed music submission process across entire remote programming department to meet proper approval for track ausage; ensured 100% on-time submission completion of music cue sheets to adhere to music rights agreement.</li>
+            <li>Department liaison on feature shoots to ensure remote production needs were filled.</li>
+        </div>
+
+        <br />
+
+        <h4> <img class="sm-logo" src="assets/LIVESHOTS_logo.png" alt="live-shots-logo">  Liveshots DC | Technical Producer | Jun 2012 - Jun 2013 </h4>
+
+        <div class="experience-block">
+            <li>Managed all studio operations and scheduled fiber and satellite bandwidth for live studio hits between third party broadcast facility and various television networks. </li>
+            <li>Operated robotic cameras and monitored control room communication during broadcast windows.</li>
+            <li>Worked directly with high profile guests on a daily basis, including politicians, journalists and media personalities.</li>
         </div>
       </div>
         <!-- end of the Professional Experience Section -->
 
 
         <div class="outer-block" id="education">
-          <br />
-          <br />
           <h3>EDUCATION</h3>
           <div class="experience-block">
             <div class="education-heading">
@@ -120,7 +117,7 @@
             <div class="education-body">
               <ul>
                 <li>Immersive full-stack software engineering program with technical focus on JavaScript and Ruby frameworks</li>
-                <li>Created 4 fully functioning applications using Ruby on Rails, vanilla JavaScript, React, and Redux</li>
+                <li>Created 4 fully functioning applications using Ruby on Rails, vanilla JavaScript, and React</li>
               </ul>
             </div>
           </div>
@@ -130,18 +127,13 @@
           <div class="experience-block">
             <div class="education-block">
               <div class="education-heading">
-                <h5 class="dark">New York University<br />New York, NY<br />B.S. Winter 2016</h5>
+                <h5 class="dark">Ithaca College<br />Ithaca, NY<br />B.S. Spring 2012</h5>
               </div>
               <div class="education-body">
                 <ul>
-                  <li>Leonard N. Stern School of Business B.S., Finance & Management, GPA: 3.7 </li>
-                  <li>Awards: Irving H. Isaac Scholarship; Joan & Dan Holmes Scholarship; Suh Family Scholarship </li>
+                  <li>Roy H. Park School of Communication B.S., Television and Radio, Video Production concentration </li>
+                  <li>Awards: Rod Serling Scholarship recipient for excellence in screenwriting</li>
                   <li>Teacher’s Assistant by invitation, International Financial Management, Fall 2015 </li>
-                  <li>Activities: </li>
-                    <ul>
-                      <li>Director of Marketing & Secretary, Politics Society at NYU, Fall 2014 - Winter 2016</li>
-                      <li>Director of Marketing, Luxury and Retail Association, Fall 2015</li>
-                    </ul>
                 </ul>
               </div>
             </div>
@@ -150,15 +142,11 @@
         <!-- end of the Education Section -->
 
       <div class="outer-block" id="skills">
-        <br />
-        <br />
         <h3>SKILLS & INTERESTS</h3>
         <div class="experience-block">
           <ul>
-            <li><span class="dark">Spoken Languages:</span> Fluent Mandarin Chinese; Conversational French </li>
-            <li><span class="dark">Technical Skills:</span> VBA, HTML/CSS, Ruby/Ruby on Rails, SQL, JavaScript, React, Redux, Python </li>
-            <li><span class="dark">Other Skills:</span> Proficient in Excel modeling; advanced knowledge of Bloomberg terminal; proficient in PowerPoint template building & deck design; public speaking & pitching</li>
-            <li><span class="dark">Interests:</span> passionate artist, focusing on acrylic painting & drawing; dabbling in fashion design & couture gown making; cooking & baking comfort food; avid globe trotter</li>
+            <li><span class="dark">Technical Skills:</span> JavaScript, React, Ruby/Ruby on Rails, SQL, HTML/CSS, Adobe Creative Suite </li>
+            <li><span class="dark">Interests:</span> Passionate runner and cyclist, having run and participated in races of many distances. Avid traveller and outdoor adventure seeker always looking for trips to unchartered places.</li>
           </ul>
         </div>
         <p class="download-link"><a href="">Click here</a> to download resume in a PDF format</p>
