updated education section

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
                   <ul>
                     <li>Roy H. Park School of Communication B.S., Television and Radio, Video Production concentration </li>
                     <li>Awards: Rod Serling Scholarship recipient for excellence in screenwriting</li>
+                    <li>Activities: Senior Staff Writer/Assistant Sports Editor, Awarded National Online Pacemaker Award for Overall Excellence</li>
                   </ul>
                 </div>
               </div>
